# chainflow

./: .gitignore  pyproject.toml  requirements.txt
app/: main.py
app/database/: session.py
app/models/: scenario.py
app/routes/: dashboard.py
app/services/: simulation.py
app/static/css/: app.css
app/static/js/: app.js
app/templates/: about.html  base.html  history_page.html  index.html  leaderboard.html  login.html
app/templates/partials/: article.html  parameter_panel.html  results.html  scenario_list.html  sidebar_nav.html
