[project]
name = "chainflow"
version = "0.1.0"
description = "Educational simulator for chain-based financial system dynamics."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.30",
    "uvicorn[standard]>=0.30.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
